fix: reset on run panel and dark mode issues

--- a/src/components/layout/header/custom-notifications/custom-notifications.scss
+++ b/src/components/layout/header/custom-notifications/custom-notifications.scss
@@ -8,6 +8,7 @@
 
     @include mobile-or-tablet-screen {
         margin-inline-end: 0;
+        border-inline-start: none;
     }
 
     &--desktop {
