--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,3 +1,5 @@
+@use 'components/shared/styles/mixins' as *;
+
 .layout {
     display: flex;
     flex-direction: column;
@@ -6,5 +8,9 @@
     .deriv-header {
         background: var(--general-main-1);
         height: 4.9rem;
+
+        @include mobile-or-tablet-screen {
+            height: 4rem;
+        }
     }
 }
