--- a/src/pages/dashboard/bot-list/index.scss
+++ b/src/pages/dashboard/bot-list/index.scss
@@ -508,6 +508,10 @@
                 border: none;
                 width: unset;
                 padding: 0;
+
+                svg {
+                    fill: var(--text-general);
+                }
             }
         }
 
